# my-gpt-bot

./: .env.example  .gitignore  README.md  alembic.ini  package-lock.json  package.json  pyproject.toml  todo.md  webpack.common.js  webpack.config.js  webpack.dev.js
alembic/: env.py
alembic/versions/: 947d2ebc05f0_create_db.py  d43479949608_add_column_name_and_username_in_table_.py  f76ed9b40729_create_db.py
app/: __main__.py  __main__2.py  bot.py  commands.py  configreader.py  server.py  settings.py
app/src/dialogs/: states.py
app/src/dialogs/handlers/: admin.py  model_settings.py  openai.py  settings.py  user.py  user_settings.py
app/src/dialogs/keyboards/: admin.py  create_poll.py  models.py  settings.py  user.py
app/src/middleware/: db.py
app/src/services/: admin.py  dialogs.py  exceptions.py  markdown.py  openai.py  user.py  user_settings.py
app/src/services/dao/: settings_dao.py
app/src/services/db/: base.py  db_connect.py  db_requests.py  models.py  tables.py
app/src/services/db/dao/: base_dao.py  dao.py  exceptions.py  (+1 more)
app/src/services/openai/: enums.py  openai.py  openai_models.py
app/src/services/texts/: admin.py  open_ai.py  settings.py
app/webapp/: api.py  manager.py  md_format.py
migrations/: env.py
migrations/versions/: 0f7a63b93bb9_initial_revision.py  0f7e2311b6a6_change_columns_type_to_enum.py  1407a0bfbc13_create_db.py  76dfc23934b2_add_table_settings.py  7f96588a663f_feat_create_tables.py  820c2e7a5496_fix_исправил_колонки_с_enum.py  8b254e8febab_feat_create_tables.py  fe057929f2e8_initial_revision.py
static/css/: style.css
static/css/pygments-css/: monokai.css  my.css  vim.css
static/js/: app.bundle.js  chats_menu.js  create_chat.js  dialog.js  index.js  main.js  sockets.js  userdata.js
templates/: index.html
