[tool.poetry]
name = "my-gtp-bot"
version = "0.1.0"
description = ""
authors = ["aldi <alkin.denis@gmail.com>"]
readme = "README.md"
packages = [{include = "my-gtp-bot"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
SQLAlchemy = "^2.0.30"
alembic = "^1.13.1"
aiogram = "^3.6.0"
openai = "^1.30.1"
aiosqlite = "^0.20.0"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
