[tool.poetry]
name = "my-gtp-bot"
version = "0.1.0"
description = ""
authors = ["aldi <alkin.denis@gmail.com>"]
readme = "README.md"
packages = [{include = "my-gtp-bot"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.35"}
alembic = "^1.13.2"
aiogram = "^3.13.1"
openai = "^1.30.1"
aiosqlite = "^0.20.0"
pydantic-settings = "^2.2.1"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
